# example-python-lambda-deployment

./: Makefile  README.md  pyproject.toml  requirements-dev.txt
infra/: main.tf  terraform.tfvars.example  variables.tf
src/example/: lambda_function.py
tests/: test_lambda_function.py
